--- a/mailtemplate/registration.html
+++ b/mailtemplate/registration.html
@@ -1,11 +1,13 @@
 <tr>
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
-      <tr>
-        <td  style="padding:20px 20px 0 20px">
-        	<p style="color: #545454; font-size: 13px; line-height: 20px;">Hello {USERNAME}!</p>
-            <p style="color: #545454; font-size: 13px; line-height: 20px;">Thanks for signing up for <a href="{NEXTSTEPURL}">{SITENAME}</a>.</p>
-            <p style="color: #545454; font-size: 13px; line-height: 20px;">Your Account has been registered Successfully with EntirX. You will get a call from our representative to activate the account.</p>
-            <p style="color: #545454; font-size: 13px; line-height: 20px;">If you face any trouble, please send an email to {CONTACTMAIL}</p>
-          </td>
-      </tr>
+            <tr>
+                <td  style="padding:20px 20px 0 20px">
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Dear {USERNAME}!</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Thank you for signing up, we just need to verify your email address.</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;"><a href="{NEXTSTEPURL}">Click Here to activate</a>.</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">If you can't click the button above, you can verify your email address by copying and pasting (or typing) the following address into your browser:</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;"><a href="{NEXTSTEPURL}">{NEXTSTEPURL}</a></p>
 
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">{SITENAME}</p>
+                </td>
+            </tr>
